controller/test/e2e/features/agentgateway/basicauth/testdata/secured-gateway-policy.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route-secure-gw
  namespace: agentgateway-base
spec:
  parentRefs:
    - name: gateway
  hostnames:
    - "securegateways.com"
  rules:
    - backendRefs:
        - name: backend
          port: 80
---
apiVersion: agentgateway.dev/v1alpha1
kind: AgentgatewayPolicy
metadata:
  name: gw-policy-users
  namespace: agentgateway-base
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway
  traffic:
    basicAuthentication:
      mode: Strict
      realm: test
      users:
        - "alice:$apr1$SrcRE04W$bio6ASdFjG8ANvVHWgfr80"
        - "bob:$apr1$dNQyeFtD$xsHfBS/Bn5fbMLhjNlV1A/"
