controller/test/e2e/features/agentgateway/basicauth/testdata/secured-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route-secure
  namespace: agentgateway-base
spec:
  parentRefs:
    - name: gateway
  hostnames:
    - "secureroute.com"
  rules:
    - backendRefs:
        - name: backend
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route-secure-too
  namespace: agentgateway-base
spec:
  parentRefs:
    - name: gateway
  hostnames:
    - "secureroutetoo.com"
  rules:
    - backendRefs:
        - name: backend
          port: 80
---
apiVersion: agentgateway.dev/v1alpha1
kind: AgentgatewayPolicy
metadata:
  name: secure-route-policy
  namespace: agentgateway-base
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: route-secure
  traffic:
    basicAuthentication:
      mode: Strict
      realm: test
      users:
      - "alice:$apr1$SrcRE04W$bio6ASdFjG8ANvVHWgfr80"
      - "bob:$apr1$dNQyeFtD$xsHfBS/Bn5fbMLhjNlV1A/"
---
apiVersion: agentgateway.dev/v1alpha1
kind: AgentgatewayPolicy
metadata:
  name: secure-route-with-secret-policy
  namespace: agentgateway-base
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: route-secure-too
  traffic:
    basicAuthentication:
      mode: Strict
      realm: test
      secretRef:
        name: basic-auth-too
---
apiVersion: v1
kind: Secret
metadata:
  name: basic-auth-too
  namespace: agentgateway-base
stringData:
  .htaccess: |
    eve:$apr1$XWQNGp.W$vyxWmttk.3rSUazKWs4ep1
    mallory:$apr1$yjRLTgbq$pVe9hx/fiV1SrdYMkz0ht.
